feat: add theme apis
